--- a/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/broken.sh.htm
+++ b/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/broken.sh.htm
@@ -53,7 +53,7 @@ echo '<div id=top>'
 echo $"Problemas detectados."
 echo '</div>'
 
-echo $"A instalação de novos pacotes não pode prosseguir, existem pacotes conflitantes instalados."
+echo $"A instalação de novos pacotes não pode prosseguir porque existem pacotes conflitantes instalados."
 
 echo $"Confira a solução apresentada abaixo e decida se devo aplicá-la."
 
