--- a/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/install.sh.htm
+++ b/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/install.sh.htm
@@ -45,7 +45,7 @@ echo '<div id=page2>'
 echo '<div id="middle" class="bar">'
 
 echo '<div id=top>'
-echo $"Aguarde, instalando..."
+echo $"Aguarde. Instalando..."
 echo '</div>'
 
 
