--- a/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/install2.sh.htm
+++ b/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/install2.sh.htm
@@ -66,7 +66,7 @@ fi
 if [ "$(cat /tmp/biglinux-deb-installer-error)" != "" ]; then
 
     echo '<div id=top>'
-    echo $"Ocorreram erros, confira:"
+    echo $"Ocorreram erros. Confira:"
     echo '</div>'
 
 echo "<div id=textApt>"
