--- a/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/update.sh.htm
+++ b/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/update.sh.htm
@@ -45,7 +45,7 @@ echo '<div id=page2>'
 echo '<div id="middle" class="bar">'
 
 echo '<div id=top>'
-echo $"Aguarde, atualizando lista de pacotes..."
+echo $"Aguarde. Atualizando lista de pacotes..."
 echo '</div>'
 
 
