--- a/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/update2.sh.htm
+++ b/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/update2.sh.htm
@@ -59,7 +59,7 @@ APT_UPDATE="1" WINDOW_ID="$(xprop -root '\t$0' _NET_ACTIVE_WINDOW | cut -f 2)" u
 
 
     echo '<div id=top>'
-    echo $"Concluída a atualização de lista de pacotes, tente novamente instalar o pacote desejado."
+    echo $"Concluída a atualização de lista de pacotes. Tente novamente instalar o pacote desejado."
     echo '</div>'
 
     echo '<div id=buttonSpace></div>'
