Remove p_ in variables

--- a/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/install.sh.htm
+++ b/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/install.sh.htm
@@ -60,7 +60,7 @@ echo '</div></div>'
 
 echo '<script>'
 
-if [ "$p_reinstall" = "1" ]; then
+if [ "$reinstall" = "1" ]; then
     echo 'function pageRedirect() {
         window.location.replace("install2.sh.htm?reinstall=1");
     }      
