--- a/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/install2.sh.htm
+++ b/biglinux-deb-installer/usr/share/bigbashview/bcc/apps/biglinux-deb-installer/install2.sh.htm
@@ -52,7 +52,7 @@ echo '<div id="middle" class="bar">'
 
 
 
-if [ "$p_reinstall" = "1" ]; then
+if [ "$reinstall" = "1" ]; then
 
 REINSTALL="--reinstall" WINDOW_ID="$(xprop -root '\t$0' _NET_ACTIVE_WINDOW | cut -f 2)" urxvt +sb  -depth 32 -fg white -fn "xft:Ubuntu Mono:pixelsize=18" -pixmap terminalbg.jpg -embed $(xprop -root '\t$0' _NET_ACTIVE_WINDOW | cut -f 2) -sr -bc -e /usr/share/bigbashview/bcc/apps/biglinux-deb-installer/install_terminal.sh
 
